--- a/example-smart-app/src/css/example-smart-app.css
+++ b/example-smart-app/src/css/example-smart-app.css
@@ -4,8 +4,8 @@ th, td {
 }
 
 th {
-  color: white;
-  background-color: #103775;
+  color: white !important;
+  background-color: #103775 !important;
 }
 
 body {
